# recollection

./: .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  fabfile.py  manage.py  pyproject.toml  requirements.txt
apps/users/: managers.py  models.py  tests.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/words/: __init__.py  admin.py  admin_mixins.py  apps.py  exceptions.py  forms.py  formsets.py  managers.py  modelmixins.py  models.py  tests.py  urls.py  validators.py  views.py  word_parser.py
apps/words/migrations/: 0001_initial.py  0001_squashed_0010_auto_20160919_0308.py  0002_auto_20160917_0358.py  0002_auto_20160928_0225.py  0003_auto_20160917_2010.py  0003_auto_20161001_1941.py  0004_auto_20161001_1943.py  0004_japaneseword_created_at.py  0005_auto_20160917_2022.py  0005_auto_20161001_1945.py  0006_auto_20160917_2028.py  0006_auto_20161002_1848.py  0007_auto_20160917_2351.py  0007_auto_20161015_2330.py  0008_auto_20160917_2355.py  0008_auto_20161016_0002.py  0009_auto_20160918_2248.py  0009_auto_20161016_0022.py  0010_auto_20160919_0308.py  0010_auto_20170223_0036.py  0011_auto_20170223_0059.py
apps/words/models/: __init__.py  english_word.py  japanese_syllable.py  japanese_word.py  jp_quiz.py  jp_quiz_answer.py  jp_quiz_question.py  jp_quiz_template.py  kanji.py  reading.py  (+1 more)
fixtures/: jap_syllables.json  test_readings.json
gulp/: gulpfile.js  package-lock.json  package.json
recollection/: admin.py  asgi.py  middlewares.py  prod.py  settings.py  test.py  urls.py  wsgi.py
static/: package-lock.json  package.json
(+13 files in other folders)
