[tool.poetry]
name = "recollection"
version = "0.1.0"
description = ""
authors = ["Tipuch"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
psycopg2-binary = "^2.8.6"
argon2-cffi = "^20.1.0"
django-redis = "^4.12.1"
cryptography = "^3.3"
django-crispy-forms = "^1.10.0"
pytz = "^2020.5"
django-model-utils = "^4.1.1"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
bandit = "^1.7.0"
selenium = "^3.141.0"
